--- a/app/views/includes/foot.html
+++ b/app/views/includes/foot.html
@@ -2,7 +2,7 @@
 	<script type="text/javascript" src="{{file}}"></script>
 {% endfor %}
 
-{% if (process.env.NODE_ENV == 'development') %}
+{% if (process.env.NODE_ENV == 'production') %}
 	<!-- Livereload script rendered -->
 	<script type="text/javascript" src="{{'http://' + req.host + ':35729/livereload.js'}}"></script>
 {% endif %}
